'Set Action' in outliner does not correctly update the animation #119106

Closed
opened 2024-03-06 02:31:45 +01:00 by Albert-OShea · 3 comments

System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.23

Blender Version
Broken: version: 4.1.0 Beta, branch: blender-v4.1-release, commit date: 2024-03-05 20:16, hash: 49c723e1176a
Also broken in 4.0.2

Short description of error
The outliner context menu Set Action that appears when right-clicking on an Object's Animation label doesn't seem to properly refresh or update the current action.

Exact steps for others to reproduce the error

  • In the attached blend file, the current action for the cube is rotate. Scrub the timeline to see what it looks like.
  • Right click on the cube's Animation label in the outliner, and click Set Action
    Screenshot 2024-03-06 122506.png
  • Choose the action scale
  • Play the timeline again. The wrong action is playing, it is still playing the 'rotate' action, though you can see the current action was updated in the interface.
**System Information** Operating system: Windows-10-10.0.22631-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.23 **Blender Version** Broken: version: 4.1.0 Beta, branch: blender-v4.1-release, commit date: 2024-03-05 20:16, hash: `49c723e1176a` Also broken in 4.0.2 **Short description of error** The outliner context menu `Set Action` that appears when right-clicking on an Object's `Animation` label doesn't seem to properly refresh or update the current action. **Exact steps for others to reproduce the error** - In the attached blend file, the current action for the cube is `rotate`. Scrub the timeline to see what it looks like. - Right click on the cube's `Animation` label in the outliner, and click `Set Action` ![Screenshot 2024-03-06 122506.png](/attachments/d93ebb9f-6747-4196-8bde-c22e6b14a2f1) - Choose the action `scale` - Play the timeline again. The wrong action is playing, it is still playing the 'rotate' action, though you can see the current action was updated in the interface.
Albert-OShea added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-03-06 02:31:46 +01:00
Member

Thanks for the report. Can confirm, checking

Thanks for the report. Can confirm, checking
Member

Looks like missing update to dependency graph, I'll make a PR.

Looks like missing update to dependency graph, I'll make a PR.
Pratik Borhade self-assigned this 2024-03-06 05:42:48 +01:00
Member

BTW submitted the fix !119112

BTW submitted the fix !119112
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-08 12:24:18 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119106
No description provided.