Fix #119106: Set Action in outliner does not update the animation

This is due to the missing depsgraph update

Pull Request: https://projects.blender.org/blender/blender/pulls/119112